# agent_race

./: CHANGELOG.md  FORMAT.md  MANIFEST.in  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: case-study.md
harness/: README.md  run_agent.py
src/tokenomist/: __init__.py  analyzer.py  cli.py  dashboard.py  models.py  prices.json  pricing.py  report.py  router.py  tokens.py
src/tokenomist/parsers/: __init__.py  base.py  gemini.py  langgraph.py  native.py  openai_chat.py
tests/: test_analyzer.py  test_cli.py  test_harness.py  test_parsers.py  test_pricing_tokens.py
