[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenomist"
version = "0.1.0"
description = "Measure, route, and compare AI agents by correctness, cost, latency, and tokens."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["llm", "agents", "workload-characterization", "observability", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wuisabel-gif/Tokenomist"
Repository = "https://github.com/wuisabel-gif/Tokenomist"
Issues = "https://github.com/wuisabel-gif/Tokenomist/issues"
Changelog = "https://github.com/wuisabel-gif/Tokenomist/blob/main/CHANGELOG.md"
Demo = "https://wuisabel-gif.github.io/Tokenomist/"

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "pandas>=2.0"]
tokens = ["tiktoken>=0.6"]
capture = ["openai>=1.0"]
dev = ["build>=1.2", "pytest>=7.0", "ruff>=0.6", "twine>=5.0"]

[project.scripts]
tokenomist = "tokenomist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokenomist = ["prices.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle errors/warnings, pyflakes, import sorting, pyupgrade, bugbear.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["tokenomist"]
